options list is working

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 <body>
   
   <header>RPS-101</header>
-  <p> The classic game now with a twist: 98 more options.</p>
+  <p> The classic game with a twist: 98 more options.</p>
 
 
   <form>
-    <select id="choiceList" >
-      <option value="test1">Test1</option>
-    </select>
+    <select id="choiceList"></select>
     <button type="submit" id="submitButton">Play</button>
   </form>
 
